--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
-
+body{
+    text-align: center;
+    padding: 20px;
+}
 .text{
     display: flex;
     flex-direction: column;
+}
+textarea{
+    font-size: 16px;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    text-align: center;
 }
 .button{
     display: flex;
@@ -14,6 +24,9 @@
     text-align: center;
     padding: 5px;
     transform: scale(1.2); 
+}
+.btnClear{
+    margin-left: 30px;
 }
 h1{
     background-color: beige;
