--- a/style.css
+++ b/style.css
@@ -1,38 +1,8 @@
-body{
-    text-align: center;
-    padding: 20px;
-}
-.text{
-    display: flex;
-    flex-direction: column;
+
+button:hover{
+    padding: 5px ;
+    border: 10%;
 }
 textarea{
-    font-size: 16px;
-    padding: 10px;
-    border: 1px solid black;
-    border-radius: 5px;
-    text-align: center;
-}
-.button{
-    display: flex;
-    margin-top: 40px;
-}
-.desc{
-    margin-left: 30px;
-}
-.button button:hover{
-    text-align: center;
-    padding: 5px;
-    transform: scale(1.2); 
-}
-.btnClear{
-    margin-left: 30px;
-}
-h1{
-    background-color: beige;
-    margin: 0 auto;
-    width: 100%;
-    border: 100%;
-    text-align: center;
-    font-size: medium;
+    border-radius: 5%;
 }
