--- a/style.css
+++ b/style.css
@@ -1,25 +1,43 @@
 body{
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
-    background-color: #d2edf7;
-    background-position: 50%;
 }
-header{
-    background-color: #96d5ed;
-    margin: 0% ;
+input[type="text"],input[type="password"]{
+    outline: none ;
+    padding: 20px;
+    display: block;
+    width: 300px ;
+    border-radius: 3px;
+    border: 1px solid #eee;
+    margin: 20px auto;
 }
 button{
-    
-    text-align: center;
+    padding: 10px;
+    color: #fff;
+    background: #0098cb;
+    width: 320px ;
+    margin: 20px auto;
+    margin-top: 0;
+    border: 0;
+    border-radius: 3px;
+    cursor: pointer;
 }
 button:hover{
-    padding: 5px ;
-    border: 10%;
-}
-textarea{
-    border-radius: 5%;
+     background-color: #00b8eb;
 }
 
-footer{
-    background-color: #96d5ed;
-    margin: 0% ;
+header{
+    border-bottom: 2px solid #eee;
+    padding: 20 px 0;
+    margin: 50px auto;
+    margin-bottom: 10px;
+    width: 100%;
+    text-align: center;
+}
+header a{
+   
+    text-decoration: none;
+    color: #333;
 }
